fixes to blog section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Project One</title>
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Italiana|Lato:300,400|Catamaran:700|Roboto:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Italiana|Lato:300,400|Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
@@ -47,7 +47,9 @@
                 <div class="handCraftedRight">
                     <h2>Hand Crafted</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus nulla pulvinar tortor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus nulla pulvinar tortor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla el. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. </p>
-                    <button class="readMore">Read More</button>
+                    <button class="readMore">
+                        <a href="https://hackeryou.com">Read More</a>
+                    </button>
                 </div>
             </div>
         </article>
@@ -77,14 +79,16 @@
         </div>
         <section id="blog">
             <div class="top clearfix">
-                <article class="sustainable">
-                    <h2>Sustainable Materials</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor a elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus. Vestibulum vitae tincidunt sem, a blandit sem. Quisque interdum orci.</p>
-                    <button class="readMore">Read More</button>
-                </article>
                 <div class="image">
                     <img src="assets/image-2.jpg" alt="Image of a woman's neck, wearing 2 necklaces">
                 </div>
+                <article class="sustainable">
+                    <h2>Sustainable Materials</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor a elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus. Vestibulum vitae tincidunt sem, a blandit sem. Quisque interdum orci.</p>
+                    <button class="readMore">
+                        <a href="https://hackeryou.com">Read More</a>
+                    </button>
+                </article>
             </div>
             <div class="bottom clearfix">
                 <div class="image">
@@ -93,7 +97,9 @@
                 <article class="mix">
                     <h2>Mix & Match</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor a elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus. Vestibulum vitae tincidunt sem, a blandit sem. Quisque interdum orci.</p>
-                    <button class="readMore">Read More</button>
+                    <button class="readMore">
+                        <a href="https://hackeryou.com">Read More</a>
+                    </button>
                 </article>
             </div>
         </section>
@@ -113,9 +119,8 @@
                 <h3>Stay Updated</h3>
                 <p>Subscribe to our newsletter to stay updated.</p>
                 <div class="newsletter clearfix">
-                    <div class="emailEntry">
-                        <p class="visuallyHidden">email address</p>
-                    </div>
+                    <label for=""></label>
+                    <input type="email" name="userEmail" id="emailAdam" placeholder="email address" class="emailEntry"> 
                     <button class="subscribe">Subscribe</button>
                 </div>
             </div>
@@ -130,7 +135,5 @@
             <p>Copyright © 2019 HackerYou</p>
         </div>
     </footer>
-
-
 </body>
 </html>
