--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Project One</title>
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Italiana|Lato:300,400|Roboto:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Italiana|Lato:300,400|Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </article>
-        <section class="latestCollection wrapper">
+        <section class="latestCollection wrapper" id="gallery">
             <h2>Latest Collection</h2>
             <div class="collectionImages clearfix">
                 <img src="assets/image-2_2.jpg" alt="Silver and gold necklaces with pendants suspended in the air.">
@@ -111,7 +111,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#blog">Blog</a></li>
-                    <li><a href="#about">Gallery</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -119,8 +119,8 @@
                 <h3>Stay Updated</h3>
                 <p>Subscribe to our newsletter to stay updated.</p>
                 <div class="newsletter clearfix">
-                    <label for=""></label>
-                    <input type="email" name="userEmail" id="emailAdam" placeholder="email address" class="emailEntry"> 
+                    <label for="email" class="visuallyHidden">enter email address</label>
+                    <input type="email" name="userEmail" id="email" placeholder="email address" class="emailEntry"> 
                     <button class="subscribe">Subscribe</button>
                 </div>
             </div>
@@ -135,5 +135,6 @@
             <p>Copyright © 2019 HackerYou</p>
         </div>
     </footer>
+
 </body>
 </html>
